Fix Sonar `java:S6204`: Replace `Stream.collect(Collectors.toList())` with `Stream.toList()`
Since Java 16 there is now a better variant to produce an unmodifiable
list directly from a stream: `Stream.toList()`. This rule raises an
issue when "collect" is used to create a list from a stream.