@@ -3,7 +3,6 @@ package nl.smerik.adventofcode.aoc2020.model.train;
 import lombok.Data;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Data
@@ -14,6 +13,6 @@ public class Ticket {
     public Ticket(final String fields) {
         this.fields = Stream.of(fields.split(","))
                             .map(Integer::parseInt)
-                            .collect(Collectors.toList());
+                            .toList();
     }
 }
